# l2_order_book

./: Cargo.toml  README.md  config.toml
src/: config.toml  lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/console/: mod.rs  ui.rs
src/core/: messages.rs  mod.rs  order_book.rs
src/network/: messages.rs  mod.rs  websocket.rs
src/providers/: bitstamp.rs  deribit.rs  mod.rs
src/terminal/: mod.rs  ui.rs
src/utils/: config.rs
tests/: integration_tests.rs
