[package]
name = "l2_order_book"
version = "0.1.0"
edition = "2021"

[dependencies]
tungstenite = "0.23.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.10", features = ["derive"] }
clap_derive = "4.5.8"
tokio = { version = "1", features = ["full"] }
toml = "0.8.15"
tokio-tungstenite = "0.23.1"
futures-util = "0.3"
thiserror = "1.0"
ordered-float = "4.2.1"
log = "0.4"
env_logger = "0.11.4"
anyhow = "1.0.86"
futures = {version = "0.3", features = ["async-await"]}
deribit = "0.3.3"
envconfig = "0.10"